--- a/public/index.html
+++ b/public/index.html
@@ -1,12 +1,30 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
   <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <meta name="description" content="ZapRecall, Flashcards">
+    <meta name="keywords" content="JSX, React, Estados React">
+    <meta name="author" content="Samuel Ambrozio Marco">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Recursive:wght@300;400;500;600;700;800;900&family=Righteous&display=swap" rel="stylesheet">
+
+    <link rel="stylesheet" href="./css/reset.css">
+    <link rel="stylesheet" href="./css/styles.css">
+    
     <title>React App</title>
+    <link rel="shortcut icon" href="./assets/logo-pequeno.png" type="image/x-icon">
+    <link rel="icon" href="./assets/logo-pequeno.png" type="image/x-icon">
   </head>
+
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div class="root"></div>
   </body>
+
 </html>
