--- a/public/index.html
+++ b/public/index.html
@@ -13,13 +13,10 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Recursive:wght@300;400;500;600;700;800;900&family=Righteous&display=swap" rel="stylesheet">
-
-    <link rel="stylesheet" href="./css/reset.css">
-    <link rel="stylesheet" href="./css/styles.css">
     
-    <title>React App</title>
-    <link rel="shortcut icon" href="./assets/logo-pequeno.png" type="image/x-icon">
-    <link rel="icon" href="./assets/logo-pequeno.png" type="image/x-icon">
+    <title>ZapRecall</title>
+    <link rel="shortcut icon" href="./../src/assets/logo-pequeno.png" type="image/x-icon">
+    <link rel="icon" href="./../src/assets/logo-pequeno.png" type="image/x-icon">
   </head>
 
   <body>
