--- a/public/index.html
+++ b/public/index.html
@@ -15,13 +15,15 @@
     <link href="https://fonts.googleapis.com/css2?family=Recursive:wght@300;400;500;600;700;800;900&family=Righteous&display=swap" rel="stylesheet">
     
     <title>ZapRecall</title>
-    <link rel="shortcut icon" href="./../src/assets/logo-pequeno.png" type="image/x-icon">
-    <link rel="icon" href="./../src/assets/logo-pequeno.png" type="image/x-icon">
+    <link rel="shortcut icon" href="./icon/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="./icon/favicon.ico" type="image/x-icon">
   </head>
 
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div class="root"></div>
+
+    <script src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
   </body>
 
 </html>
